--- a/contact.html
+++ b/contact.html
@@ -263,7 +263,7 @@
                                     </div>
 
                                     <div class="col-lg-3 col-12 ms-auto">
-                                        <button type="submit" class="form-control">Send</button>
+                                        <button type="submit" class="form-control">Send Message</button>
                                     </div>
 
                                 </div>
